All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/SPM_Utilization__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object holds the technician&apos;s utlization on a daily basis</description>
    <label>SPM - Utilization</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Utilizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>