All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/fields/Available_Time__c.field-meta.xml
<CustomField>
    <fullName>Available_Time__c</fullName>
    <description>Holds the difference of minutes between working-minutes and break-minutes</description>
    <formula>Working_Minutes__c  -  (Break_Minutes__c +  Off_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Time (In Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>