All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/fields/Drive_Time__c.field-meta.xml
<CustomField>
    <fullName>Drive_Time__c</fullName>
    <label>Drive Time (In Mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>