All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/fields/Non_Productive_Time__c.field-meta.xml
<CustomField>
    <fullName>Non_Productive_Time__c</fullName>
    <label>Non Productive Time (In Mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>