All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/fields/Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the reference to the technician&apos;s manager.</description>
    <label>Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPM_Utilizations1</relationshipName>
    <type>Lookup</type>
</CustomField>