All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/fields/Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the reference to the team to which the technician belongs.</description>
    <label>Service Team</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipLabel>SPM - Utilizations</relationshipLabel>
    <relationshipName>SPM_Utilizations</relationshipName>
    <type>Lookup</type>
</CustomField>