All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>SPM - Utilizations</relationshipLabel>
    <relationshipName>Technician_Utilizations</relationshipName>
    <type>Lookup</type>
</CustomField>