All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPM_Utilizations</relationshipName>
    <type>Lookup</type>
</CustomField>