All_Component_DX/force-app/main/default/objects/SPM_Utilization__c/fields/Working_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Working_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Working Duration (In Mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>